# rs-min-trust

./: Cargo.toml  README.md
examples/simple/bitwise-or/rs-bitwise-or/: Cargo.toml  build.sh  test.mjs
examples/simple/bitwise-or/rs-bitwise-or/src/: lib.rs
js/: transform.mjs  transform_trusted_new15.mjs  transform_trusted_new16.mjs
src/: err.rs  lib.rs  wasm.rs
src/wasm/: common_wasmer.rs  common_wasmtime.rs  wasm_wasmtime.rs
