[package]
name = "rs-min-trust"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = {version="5.0.0", optional=true, features=[
    #"async",
    #"cache",
    #"wat",
    #"parallel-compilation",
    #"cranelift",
    #"pooling-allocator",
    #"vtune",
]}

wasmer = {version="3.1.1", optional=true}

[features]
default =[
    "wasm_wasmtime",
    "wasm_wasmer",
]

wasm = []

wasm_wasmtime = ["wasmtime", "wasm"]
wasm_wasmer = ["wasmer"]
